metadata-classic/objects/Case.object
<CustomObject>
    <fields>
        <fullName>MIRequestID__c</fullName>
        <label>MI: Request ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MISubcategory__c</fullName>
        <description>Marketplace Integrity Subcategory</description>
        <inlineHelpText>Marketplace Integrity Subcategory</inlineHelpText>
        <label>MI Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MICategory__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Operating w/o Owner&apos;s Permission</fullName>
                </value>
                <value>
                    <fullName>Attorney General</fullName>
                </value>
                <value>
                    <fullName>Badge Applied</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>Charged Unfairly</fullName>
                </value>
                <value>
                    <fullName>Check/Payment Scam</fullName>
                </value>
                <value>
                    <fullName>Collateral Damage</fullName>
                </value>
                <value>
                    <fullName>Community Guidlines Violation</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Customer ceased contact</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>DMCA - Owner</fullName>
                </value>
                <value>
                    <fullName>DMCA - Response</fullName>
                </value>
                <value>
                    <fullName>DOJ - No longer on site</fullName>
                </value>
                <value>
                    <fullName>Failed BGC</fullName>
                </value>
                <value>
                    <fullName>Fraud - Braintree</fullName>
                </value>
                <value>
                    <fullName>Fraud - Card Owner</fullName>
                </value>
                <value>
                    <fullName>Good Samaritan Report - Background</fullName>
                </value>
                <value>
                    <fullName>Good Samaritan Report - License</fullName>
                </value>
                <value>
                    <fullName>Harassment</fullName>
                </value>
                <value>
                    <fullName>Insufficient Info</fullName>
                </value>
                <value>
                    <fullName>MBG Pilot</fullName>
                </value>
                <value>
                    <fullName>Money Back Guarantee</fullName>
                </value>
                <value>
                    <fullName>No Badge</fullName>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>No documentation provided</fullName>
                </value>
                <value>
                    <fullName>No Longer on Site</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paid Pro - No Show/Late</fullName>
                </value>
                <value>
                    <fullName>Paid Pro - Unsatisfactory Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MITotalPaidtoPro__c</fullName>
        <description>Currency field to store the total amount paid to the professional; used for disputes escalated to Marketplace Integrity.</description>
        <label>MI: Total Paid to Pro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ManagerComments__c</fullName>
        <description>Open text area to allow managers to enter notes about their decision surrounding the dispute.</description>
        <label>Manager Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ManualCaseCreation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true indicates that the case was created by a manual process.</description>
        <label>Manual Case Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mentions__c</fullName>
        <inlineHelpText>Please select one or more items mentioned by the Pro or Customer.</inlineHelpText>
        <label>Mentions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>========= Trending Mentions =========</fullName>
                </value>
                <value>
                    <fullName>Additional Pros (Extended hybrid)</fullName>
                </value>
                <value>
                    <fullName>Auto-Save Reviews</fullName>
                </value>
                <value>
                    <fullName>Instant Results</fullName>
                </value>
                <value>
                    <fullName>New Thumbtack Announcements</fullName>
                </value>
                <value>
                    <fullName>Quoted Outside My Travel Preference</fullName>
                </value>
                <value>
                    <fullName>Reply or Decline</fullName>
                </value>
                <value>
                    <fullName>Sorting reviews</fullName>
                </value>
                <value>
                    <fullName>View as Customer / Share Profile</fullName>
                </value>
                <value>
                    <fullName>========== Other Mentions ==========</fullName>
                </value>
                <value>
                    <fullName>Android App</fullName>
                    <label>Android Apps</label>
                </value>
                <value>
                    <fullName>Anonymous Reviews</fullName>
                </value>
                <value>
                    <fullName>Customer Quick Replies</fullName>
                </value>
                <value>
                    <fullName>Instant Match Default Pricing</fullName>
                    <label>Instant Match Price Alignment</label>
                </value>
                <value>
                    <fullName>iOS Apps</fullName>
                </value>
                <value>
                    <fullName>Pro Quick Replies</fullName>
                </value>
                <value>
                    <fullName>Top Pro Program</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultipleIncidents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field used in trigger code that gets set in the before insert / before update context and will get unchecked after the trigger completes.</description>
        <label>MultipleIncidents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NegativeCSATCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to indicate if the case is associated with a negative CSAT campaign.  Field visible via the Negative CSAT Analysis permission set.</description>
        <label>Negative CSAT Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewEmailFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in workflow rule updates to determine if a new email response has been received on a closed or in progress case.</description>
        <label>New Email Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NinetySixHours__c</fullName>
        <label>NinetySixHours</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NoAccountManagerAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to when there is a new case that comes in and there is no account manager assigned on the account record.</description>
        <label>No Account Manager Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotificationMessage__c</fullName>
        <description>Formula field to display a notification message on the case based on certain criteria.  Used for agent heads up notifications.</description>
        <formula>IF( OR( RecordType.Name = &apos;Marketplace Integrity&apos;,
        RecordType.Name = &apos;Marketplace Integrity Restricted&apos;,
        RecordType.Name = &apos;Confidential&apos;),
&quot;Note: This case is being handled by MTS. Please save any calls or notes but DO NOT change the case ownership.  If the person is contacting us for a reason unrelated to their MTS incident, please create a separate case using Quick Case.  Reach out to MTS with any questions.&quot;,
NULL
)</formula>
        <label>Notification Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfTimesInPendingThumbtack__c</fullName>
        <description>Count of the number of times the case status was set to Pending Thumbtack.</description>
        <label>Number of Times in Pending Thumbtack</label>
        <summaryFilterItems>
            <field>CaseUpdateHistory__c.CasePreviousStatus__c</field>
            <operation>equals</operation>
            <value>Pending Thumbtack</value>
        </summaryFilterItems>
        <summaryForeignKey>CaseUpdateHistory__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OpenedDateMinusOne__c</fullName>
        <description>Used in specific Case reports that use the THIS WEEK or LAST WEEK date range based on the Closed date, to automatically match Thumbtack&apos;s work week, allowing for automation of weekly reports and dashboards.</description>
        <formula>CreatedDate - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opened Date (Minus One)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OriginalQueue__c</fullName>
        <description>Custom picklist field whose value indicates the team routed to.  Mainly used for email tier routing.</description>
        <label>Original Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Background Checks (Clear)</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Customer Support - Email</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Labs Live</fullName>
                </value>
                <value>
                    <fullName>LiveText</fullName>
                </value>
                <value>
                    <fullName>Marketplace Integrity</fullName>
                </value>
                <value>
                    <fullName>Marketplace Integrity (Dispute Form)</fullName>
                </value>
                <value>
                    <fullName>Noise</fullName>
                </value>
                <value>
                    <fullName>Pro Assistance</fullName>
                </value>
                <value>
                    <fullName>Spotlight Blog</fullName>
                </value>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>TPH BG Clear</fullName>
                </value>
                <value>
                    <fullName>TPH RAS</fullName>
                </value>
                <value>
                    <fullName>TPH SME</fullName>
                </value>
                <value>
                    <fullName>TSL Email</fullName>
                </value>
                <value>
                    <fullName>TSL SME</fullName>
                </value>
                <value>
                    <fullName>Quoting Service Escalations</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Sales&amp;AccountManagement</fullName>
                    <label>Sales &amp; Account Management</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerIsQueue__c</fullName>
        <description>True if owner is queue, false if owner is user</description>
        <formula>BEGINS(OwnerId,&quot;00G&quot;)</formula>
        <label>Owner Is Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PendingCustomerStartTime__c</fullName>
        <description>Date/Time field used by the &apos;Case Pending Customer Follow-Up&apos; process builder to stamp the current date/time when the process builder starts.</description>
        <label>Pending Customer Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PotentialManagedAccount__c</fullName>
        <formula>Account.PotentialManagedAccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Managed Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProCustomerWarned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating if the Pro/Customer was warned about flagging their account.</description>
        <label>Pro/Customer Warned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QAAuditCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Audit Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QAAuditDateMT__c</fullName>
        <label>QA Audit Date (MT)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAAuditPerformedBy__c</fullName>
        <description>Text field to indicate the person&apos;s name who performed the QA Audit.</description>
        <label>QA Audit Performed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QAAuditPerformedOn__c</fullName>
        <description>Date/time the QA audit was performed.</description>
        <label>QA Audit Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QAAudit__c</fullName>
        <description>Picklist field to indicate if the case was categorized accurately based on CSAT exceptions.</description>
        <label>QA Audit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accurate properties set</fullName>
                </value>
                <value>
                    <fullName>Inaccurate no contact</fullName>
                </value>
                <value>
                    <fullName>Inaccurate categorization applied</fullName>
                </value>
                <value>
                    <fullName>Inaccurate duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportOutcome__c</fullName>
        <description>Picklist field whose values determines the outcome of research on an app integration task.</description>
        <label>Fraud Report Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accurate report of fraud</fullName>
                </value>
                <value>
                    <fullName>Not accurate report of fraud</fullName>
                </value>
                <value>
                    <fullName>Report of something other than fraud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewDisputeDecision__c</fullName>
        <description>Picklist to indicate whether or not the Manager agrees with the dispute.</description>
        <label>Review Dispute Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting decision</fullName>
                </value>
                <value>
                    <fullName>Removed Review</fullName>
                </value>
                <value>
                    <fullName>Edited Review</fullName>
                </value>
                <value>
                    <fullName>Leave Review #Loveit</fullName>
                </value>
                <value>
                    <fullName>Leave Review #CBB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewLink__c</fullName>
        <description>Field for agent to paste review link for the escalated review.</description>
        <label>Review Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ReviewedByDate__c</fullName>
        <description>The date/time that the manager made a decision on the dispute.</description>
        <label>Reviewed By Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReviewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the manager user who reviewed the case dispute.</description>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CaseReviewedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceLevel__c</fullName>
        <description>Formula field that displays an image based on the age (in hours) of the case.</description>
        <formula>IF( CaseAgeHours__c &gt; 24, 
IMAGE(&quot;resource/ServiceLevelRedWarning&quot;, &quot;Red&quot;, 13,13),
IF( CaseAgeHours__c &gt; 12,
IMAGE(&quot;resource/ServiceLevelYellowWarning&quot;, &quot;Yellow&quot;, 13,13),
IMAGE(&quot;resource/ServiceLevelGreenCheck&quot;,  &quot;Green&quot;, 13,13)
))</formula>
        <label>Service Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialHotline__c</fullName>
        <formula>IF( DNIS__c = &apos;+18009482679&apos;, &quot;Requests by Phone&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Hotline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubCategory__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>App pricing / purchase</fullName>
                </value>
                <value>
                    <fullName>Background check</fullName>
                </value>
                <value>
                    <fullName>Background check (clear)</fullName>
                </value>
                <value>
                    <fullName>Background check (mismatch)</fullName>
                </value>
                <value>
                    <fullName>Background check (not clear)</fullName>
                </value>
                <value>
                    <fullName>Called for customer</fullName>
                </value>
                <value>
                    <fullName>Called for pro</fullName>
                </value>
                <value>
                    <fullName>Called for specific employee</fullName>
                </value>
                <value>
                    <fullName>Canceled request</fullName>
                </value>
                <value>
                    <fullName>Cash refund</fullName>
                </value>
                <value>
                    <fullName>Certification agreement</fullName>
                </value>
                <value>
                    <fullName>Churn</fullName>
                </value>
                <value>
                    <fullName>Competitive report</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Concerning review</fullName>
                </value>
                <value>
                    <fullName>Connection issues - didn&apos;t talk</fullName>
                </value>
                <value>
                    <fullName>Credentials</fullName>
                </value>
                <value>
                    <fullName>CS Assisted - Call back needed</fullName>
                </value>
                <value>
                    <fullName>CS Assisted - CC not provided</fullName>
                </value>
                <value>
                    <fullName>CS Assisted - PA Live</fullName>
                </value>
                <value>
                    <fullName>Customer / other</fullName>
                </value>
                <value>
                    <fullName>Customer contact</fullName>
                </value>
                <value>
                    <fullName>Customer Contact Dispute</fullName>
                </value>
                <value>
                    <fullName>Disconnected (pro or customer)</fullName>
                </value>
                <value>
                    <fullName>Disconnected (specialist)</fullName>
                </value>
                <value>
                    <fullName>Dispute</fullName>
                </value>
                <value>
                    <fullName>DMCA/Copyright</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Duplicate request</fullName>
                </value>
                <value>
                    <fullName>Dynamic pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Text area field used in list views that displays the first 255 characters of an incoming email/web case.  Populated via workflow.</description>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SuppliedThumbtackID__c</fullName>
        <description>The Thumbtack user ID - data passed in from outside sources - used to match to account/contact.</description>
        <label>Supplied Thumbtack ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SupportResourceAction__c</fullName>
        <label>Support Resource Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needed</fullName>
                </value>
                <value>
                    <fullName>Taken</fullName>
                </value>
                <value>
                    <fullName>SR Ticket Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SurveyNotOfferedReason__c</fullName>
        <description>Temporary field for Jared Sperry to get a rough estimate on what prevented a CSAT from being offered (based on the formula in the CSAT Eligible field).</description>
        <formula>IF(Contact.DoNotSurvey__c,&quot;ContDNS&quot;, 
IF(ISPICKVAL(Origin, &quot;Outbound Phone&quot;), &quot;OutbPhn&quot;, 
IF(AutoClosed__c,&quot;AutoClose&quot;, 
IF(Contact.ContactIsThumbtackStaff__c,&quot;TTStaff&quot;, 
IF(SurveyOffered__c,&quot;PrevSurvCase&quot;, 
IF(IsTestData__c,&quot;TestData&quot;, 
IF(AND(NOT ISBLANK(Incident__c), 
Incident__r.RecordType.Name = &quot;MI Incident&quot;), &quot;OpenMTS&quot;, 
IF(ContactEmailRouting__c=&quot;Route to Enterprise&quot;, &quot;Enterprise&quot;, 
IF(ISPICKVAL(DoNotSurvey__c,&quot;Marketplace Integrity&quot;),&quot;DNS-MI&quot;, 
IF(ISPICKVAL(DoNotSurvey__c,&quot;Customer/Pro Requested&quot;),&quot;DNS-Rqstd&quot;, 
IF(ISPICKVAL(DoNotSurvey__c,&quot;Special Projects&quot;),&quot;DNS-SpecProj&quot;, 
IF(ISPICKVAL(DoNotSurvey__c,&quot;Abusive Pro/Customer&quot;),&quot;DNS-Abusv&quot;, 
IF(ISPICKVAL(DoNotSurvey__c,&quot;QA Audit&quot;),&quot;DNS-QA&quot;, 
IF(ISPICKVAL(DoNotSurvey__c, &quot;Sys Admin Bulk Close&quot;), &quot;DNS-Admn&quot;, 
IF(ISPICKVAL(Origin,&quot;App Integration&quot;),&quot;AppInt&quot;, 
IF(ISBLANK(ClosedDate),&quot;CaseNotClsd&quot;, 
IF(ISBLANK(Contact.Email),&quot;NoEmail&quot;, 
IF(NOT ISBLANK( DuplicateOf__c),&quot;DupCase&quot;, 
IF(ISPICKVAL(Category__c,&quot;Delete Account&quot;),&quot;DeleteAcct&quot;, 
IF(ISPICKVAL(Category__c,&quot;Chat&quot;),&quot;Chat&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Phone&quot;), ISPICKVAL(SubCategory__c,&quot;Wrong number&quot;)),&quot;Phone-WrngNmbr&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Marketplace Integrity&quot;),ISPICKVAL(SubCategory__c,&quot;Duplicate&quot;)),&quot;MI-Dup&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Marketplace Integrity&quot;),ISPICKVAL(SubCategory__c,&quot;Background check&quot;)),&quot;MI-BGC&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Marketplace Integrity&quot;),ISPICKVAL(SubCategory__c,&quot;Certification agreement&quot;)),&quot;MI-CertAgr&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Marketplace Integrity&quot;),ISPICKVAL(SubCategory__c,&quot;DMCA/Copyright&quot;)),&quot;MI-DMCA&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Marketplace Integrity&quot;), ISPICKVAL(SubCategory__c,&quot;Negative review&quot;)),&quot;MI-NegRev&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Marketplace Integrity&quot;),ISPICKVAL(SubCategory__c,&quot;Concerning review&quot;)),&quot;MI-ConcRev&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Marketplace Integrity&quot;),ISPICKVAL(SubCategory__c,&quot;Incident&quot;)),&quot;MI-Inc&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Marketplace Integrity&quot;),ISPICKVAL(SubCategory__c,&quot;License&quot;)),&quot;MI-Lic&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Marketplace Integrity&quot;),ISPICKVAL(SubCategory__c,&quot;Trademark&quot;)),&quot;MI-Trdmrk&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Marketplace Integrity&quot;),ISPICKVAL(SubCategory__c,&quot;Other&quot;)),&quot;MI-Othr&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Notifications&quot;),ISPICKVAL(SubCategory__c,&quot;Unsubscribe&quot;)),&quot;Unsbscrb&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Other&quot;),ISPICKVAL(SubCategory__c,&quot;Background check (mismatch)&quot;)),&quot;BCGmiss&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Other&quot;),ISPICKVAL(SubCategory__c,&quot;Message intended for customer&quot;)),&quot;CustMsg&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Other&quot;),ISPICKVAL(SubCategory__c,&quot;Message intended for pro&quot;)),&quot;ProMsg&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Other&quot;),ISPICKVAL(SubCategory__c,&quot;Foreign language&quot;)),&quot;Frgn&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Other&quot;),ISPICKVAL(SubCategory__c,&quot;Press Inquiries&quot;)),&quot;Press&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Other&quot;),ISPICKVAL(SubCategory__c,&quot;Noise&quot;)),&quot;Noise&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Other&quot;),ISPICKVAL(SubCategory__c,&quot;Not enough info&quot;)),&quot;InsuffInfo&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Other&quot;),ISPICKVAL(SubCategory__c,&quot;Proactive - no response&quot;)),&quot;ProacNoResp&quot;, 
IF(AND(ISPICKVAL(Category__c,&quot;Quotes&quot;),ISPICKVAL(SubCategory__c,&quot;Quote intended for customer&quot;)),&quot;Quotes-CustMsg&quot;, 
&quot;&quot;)))))))))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Not Offered Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyOffered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was a survey offered from this case?</description>
        <inlineHelpText>Has a survey been offered from this case?</inlineHelpText>
        <label>Survey Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SysAdminComments__c</fullName>
        <description>Field available for Sys Admins to add internal comments on records when making bulk updates.</description>
        <label>Sys Admin Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TakeACaseByCategoryUserId__c</fullName>
        <description>Field to store the name and Id of the individual who selected the &quot;Take a Case by Category&quot; button.</description>
        <label>Take a Case by Category User Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TakeACaseUserId__c</fullName>
        <description>Text field used to house the user id of the person who clicked the Take a Case from Tier button (console component visualforce page).</description>
        <label>Take a Case User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Text field to indicate the case owner&apos;s assigned team.  Populated via a workflow rule.</description>
        <label>Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempMI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TempMI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ThumbtackUserID__c</fullName>
        <formula>Account.ThumbtackUserID__c</formula>
        <label>Thumbtack User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TierCategoryTriageDateTime__c</fullName>
        <description>Date/time field stamped via workflow when the case was initially triaged to a Tier queue.</description>
        <label>Tier Category Triage Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeInNewSeconds__c</fullName>
        <description>Rollup summary of the time the case spent in a &apos;New&apos; status.</description>
        <label>Time in New (Seconds)</label>
        <summarizedField>CaseUpdateHistory__c.DurationSeconds__c</summarizedField>
        <summaryFilterItems>
            <field>CaseUpdateHistory__c.CasePreviousStatus__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>CaseUpdateHistory__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TimeInPendingCustomerSeconds__c</fullName>
        <description>The duration of time the case spent in a &apos;Pending Customer&apos; status.</description>
        <label>Time in Pending Customer (Seconds)</label>
        <summarizedField>CaseUpdateHistory__c.DurationSeconds__c</summarizedField>
        <summaryFilterItems>
            <field>CaseUpdateHistory__c.CasePreviousStatus__c</field>
            <operation>equals</operation>
            <value>Pending Customer</value>
        </summaryFilterItems>
        <summaryForeignKey>CaseUpdateHistory__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TimeInPendingThumbtackSeconds__c</fullName>
        <description>The duration of time the case spent in a &apos;Pending Thumbtack&apos; status.</description>
        <label>Time in Pending Thumbtack (Seconds)</label>
        <summarizedField>CaseUpdateHistory__c.DurationSeconds__c</summarizedField>
        <summaryFilterItems>
            <field>CaseUpdateHistory__c.CasePreviousStatus__c</field>
            <operation>equals</operation>
            <value>Pending Thumbtack</value>
        </summaryFilterItems>
        <summaryForeignKey>CaseUpdateHistory__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TimeOfDayCaseOpened__c</fullName>
        <description>Formula field that extracts out the hour from the cases Date/Time Opened field (createddate), in 24 hour format, used in reporting.</description>
        <formula>VALUE(MID (TEXT (CreatedDate - 0.2502), 12, 2))</formula>
        <label>Hour Case Opened (24 Hr Format)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeToCategorizeMins__c</fullName>
        <description>Formula field to calculate the time (in minutes) between the date/time the case was opened and the date/time the case was categorized for triage purposes.</description>
        <formula>(TierCategoryTriageDateTime__c -  CreatedDate)*1440</formula>
        <label>Time to Categorize (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeWithSeconds__c</fullName>
        <formula>TEXT(CreatedDate)</formula>
        <label>Time with Seconds</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferredtoMI__c</fullName>
        <description>Date and time of when case was transferred to MI to help with SLA requirements.</description>
        <label>Transferred to MI</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdateChatterforReviewDispute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Chatter for Review Dispute</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>